@@ -70,6 +70,7 @@
 
 <!-- identification -->
 	<form action='login.php' method='post' >
+		<input type='hidden' name='auth_sso_secours' value='[onshow.auth_sso_secours]' />
 		<div id ='identification'>
 				
 <!-- Utilisation multisite -->
